update vis metric

--- a/notebooks/demographic_visualisation.ipynb
+++ b/notebooks/demographic_visualisation.ipynb
@@ -11,7 +11,7 @@
     "import geopandas as gpd\n",
     "import folium\n",
     "from folium.features import GeoJsonTooltip\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -62,8 +62,8 @@
     "# -------------------------------\n",
     "# Choose a Variable to Visualize\n",
     "# -------------------------------\n",
-    "# metric = 'rent_to_income_ratio'\n",
-    "metric = 'pct_students'\n",
+    "metric = 'rent_to_income_ratio'\n",
+    "# metric = 'pct_students'\n",
     "tooltip_fields = ['sa2_code', 'median_weekly_rent', 'median_weekly_income', 'rent_to_income_ratio']\n",
     "\n",
     "# Add Choropleth Layer\n",
